*Useful comment here*

--- a/Computing_Assignment_VII/group_The_Franciscans/assign_7_The_Franciscans.Rmd
+++ b/Computing_Assignment_VII/group_The_Franciscans/assign_7_The_Franciscans.Rmd
@@ -26,45 +26,40 @@ data_RS <- read_csv("https://raw.githubusercontent.com/ucdavis/ARE_ECON_240A_201
 ```{r include=FALSE}
 # OLS supply incl ln_w
 OLS_supply <- lm(ln_qs~ln_fp + ln_w + trendsp1 + trendsp2 + trendsp3, data=data_RS)
-summary(OLS_supply)
-  # Coefficient on ln_fp (8.876e-02) same sign, but significant (t=7.628) and half the magnitude
 
 # OLS supply excl ln_w
 OLS_supply_exclw <- lm(ln_qs~ln_fp + trendsp1 + trendsp2 + trendsp3, data=data_RS)
-summary(OLS_supply_exclw)
 
 # OLS demand
 OLS_demand <- lm(ln_qd~ln_sp + trendsp1 + trendsp2 + trendsp3, data=data_RS)
-summary(OLS_demand)
-  # Coefficient on ln_sp same sign, similar magnitude, but insignificant
 ```
 
 ```{r include=FALSE}
 IV_supply <- ivreg(ln_qs ~ ln_fp + ln_w + trendsp1 + trendsp2 + trendsp3 | lag(ln_w) + ln_w + trendsp1 + trendsp2 + trendsp3, data=data_RS)
-summary(IV_supply)
-  # Coefficient same sign and similar magnitude, standard error also similar (0.101652)
 
 IV_supply_exclw <- ivreg(ln_qs ~ ln_fp + trendsp1 + trendsp2 + trendsp3 | lag(ln_w) + ln_w + trendsp1 + trendsp2 + trendsp3, data=data_RS)
-summary(IV_supply_exclw)
 
 IV_demand <- ivreg(ln_qd ~ ln_sp + trendsp1 + trendsp2 + trendsp3 | ln_w + trendsp1 + trendsp2 + trendsp3, data=data_RS)
-summary(IV_demand)
-  # Coefficient on ln_sup same sign, similar magnitude, similar standard error
 ```
 
 ## Estimate OLS and IV: full model {.smaller}
-
+Using OLS, our estimated supply elasticity is the same sign as but four times as large as the RS estimate (0.089 vs. 0.020), and highly significant where theirs is not. Using IV, our estimate is very similar to the RS estimate: 0.102 vs. 0.096 with the same s.e. (0.025). 
 ```{r}
 kable(cbind(summary(OLS_supply)$coefficients,summary(IV_supply)$coefficients), caption = "Supply", digits = 3, format = "html") %>%
   kable_styling(full_width = F) %>%
   add_header_above(c(" ", "OLS" = 4, "IV" = 4))
+```
 
+## Estimate OLS and IV: full model {.smaller}
+Using OLS, our estimated demand elasticity is very close to the RS estimate: -0.017 vs. -0.018 with s.e. of 0.011 vs. 0.010. Using IV, our estimate is also very similar: -0.063 vs. -0.055 with s.e.of  0.023 vs. 0.024. 
+```{r}
 kable(cbind(summary(OLS_demand)$coefficients,summary(IV_demand)$coefficients), caption = "Demand", digits = 3, format = "html") %>%
   kable_styling(full_width = F) %>%
   add_header_above(c(" ", "OLS" = 4, "IV" = 4))
 ```
 
 ## Estimate OLS and IV: ln_w as instrument only {.smaller}
+If we exclude the yield shock from the OLS model and include it only as an instrument in the IV model, our OLS estimate of the supply elasticity becomes closer to RS: now 0.38 with a s.e. of 0.24. The IV estimates also change as the yield shock is included only as an instrument and not as a control in the main regression -- the estimate is now -0.072 with s.e. 0.55. This is not surprising because ln_w was highly significant in the full model, so removing it will result in the estimates being biased.
 ```{r}
 kable(cbind(summary(OLS_supply_exclw)$coefficients,summary(IV_supply_exclw)$coefficients), caption = "Supply", digits = 3, format = "html") %>%
   kable_styling(full_width = F) %>%
@@ -77,13 +72,11 @@ kable(cbind(summary(OLS_supply_exclw)$coefficients,summary(IV_supply_exclw)$coef
 beta_diff <- coefficients(OLS_supply) - coefficients(IV_supply)
 cov_diff <- vcov(IV_supply) - vcov(OLS_supply)
 Hs = t(beta_diff) %*% Ginv(cov_diff) %*% beta_diff
-Hs
 
-# model excluding ln_w -- how do we do this when the matrices are different sizes?? 
+# model excluding ln_w 
 beta_diff_exclw <- coefficients(OLS_supply_exclw) - coefficients(IV_supply_exclw)
 cov_diff_exclw <- vcov(IV_supply_exclw) - vcov(OLS_supply_exclw)
 Hs_exclw = t(beta_diff_exclw) %*% Ginv(cov_diff_exclw) %*% beta_diff_exclw
-Hs_exclw
 ```
 
 ```{r echo=FALSE}
@@ -109,4 +102,17 @@ kable(cbind(summary(OLS_supply_area)$coefficients,summary(IV_supply_area)$coeffi
   add_header_above(c(" ", "OLS" = 4, "IV" = 4))
 ```
 
-## Comments about canvas vs. RS dataset {.smaller}
+## What happens if we exclude the extra 7 years of data? {.smaller}
+```{r include=FALSE}
+OLS_supply_RS <- lm(ln_qs~ln_fp + ln_w + trendsp1 + trendsp2 + trendsp3, data=filter(data_RS, year<2008))
+
+IV_supply_RS <- ivreg(ln_qs ~ ln_fp + ln_w + trendsp1 + trendsp2 + trendsp3 | lag(ln_w) + ln_w + trendsp1 + trendsp2 + trendsp3, data=filter(data_RS, year<2008))
+```
+
+```{r echo=FALSE}
+kable(cbind(summary(OLS_supply_RS)$coefficients,summary(IV_supply_RS)$coefficients), caption = "Supply, data through 2007", digits = 3, format = "html") %>%
+  kable_styling(full_width = F) %>%
+  add_header_above(c(" ", "OLS" = 4, "IV" = 4))
+```
+
+## Comments on organization of Canvas vs. RS dataset
